intro to sql completed

--- a/1.introductionToSql/1.2.querying.md
+++ b/1.introductionToSql/1.2.querying.md
@@ -1,3 +1,6 @@
+# Query
+A query is a request for data from the database.
+
 ## SELECT
 The select keyword indicates which field should be selected.  
 
@@ -14,7 +17,7 @@ FROM employees;
  - Break queries into multiple lines for readability.
 
 ```sql
-SELECT * FROM employee;
+SELECT * FROM employees;
 ```
 
 **Note**  
@@ -25,8 +28,42 @@ Used to rename column ie. **Aliasing**. This doesnt affect the field name in the
 
 ```sql
 SELECT name AS first_name
-FROM employees
+FROM employees;
 ```
 
 ## DISTINCT
-To avoid 
+When the DISTINCT keyword is used the output will be a **list of unique values**  
+**Eg:1**
+```sql
+SELECT DISTINCT age
+FROM employees;
+```
+  
+**Eg:2**
+```sql
+SELECT DISTINCT age, gender
+FROM employees;
+```
+  
+In this case the combination of age and gender will be unique.  
+  
+age gender  
+2 &emsp; M   
+3 &emsp; F  
+2 &emsp; F  
+
+## VIEWS
+A view is a virtual table(Not stored in the database) that stores the result of the SELECT statement. Once a view is created we can query it just like a normal table. When a view is created there is no result set for the SELECT statement.   
+
+```sql
+CREATE VIEW employees_gender_age AS
+SELECT gender, age 
+FROM employees;
+```
+
+## LIMIT/TOP  
+Limit(PostgreSQL)/Top(SQL Server) is used to limit the number of records returned.  
+SQL has a few different versions. Except a few syntax the rest will be same between the different SQL versions.  
+- PostgreSQL
+- SQL Server  
+- etc...
