ch 2 in progress 1

--- a/2.IntermediateSQL/1.selectingData.md
+++ b/2.IntermediateSQL/1.selectingData.md
@@ -1,16 +1,18 @@
 ## COUNT
 
+Count the number of **records present** in the table.
 ```sql
 SELECT COUNT(*) AS total_records
 FROM employees;
 ```
-This command will return the number of records present in the table.
 
+Count the number of records in which the age is specified.
 ```sql
 SELECT COUNT(age) AS count_age
 FROM employees;
 ```
 
+Count multiple fields at the same time.
 ```sql
 SELECT COUNT(age) AS count_age, COUNT(gender) AS count_gender
 FROM employees;
@@ -19,3 +21,10 @@ op =>
 |count_age|count_gender|
 |---|---|
 |120|213|
+
+
+**Count** the number of **distinct** age 
+```sql
+SELECT COUNT(DISTINCT age) AS count_distinct_age
+FROM employees;
+```
