ch 2 in progress

--- a/2.IntermediateSQL/1.selectingData.md
+++ b/2.IntermediateSQL/1.selectingData.md
@@ -28,3 +28,27 @@ op =>
 SELECT COUNT(DISTINCT age) AS count_distinct_age
 FROM employees;
 ```
+
+SQL code is **not processed in its written order**
+Eg: 
+```sql
+SELECT age
+FROM employees
+LIMIT 10;
+```
+Here FROM(table) gets executed first then SELECT(column name) then finally LIMIT gets executed.  
+  
+SQL querires formatting is not required(but writing unformatted code is not a good practice).  
+```sql
+select age, gender, college from employees limit 3
+```
+This is a valid SQL code but should be avoided.  
+
+[SQL Style Guide](https://www.sqlstyle.guide/) by Simon Holywell
+
+**Note** 🧠  
+If a table is created in which the field names have spaces(created by mistake - no of seats instead of no_of_seats). The field name should be closed within double quotes to access the column.
+```sql
+SELECT "no of seats"
+FROM cars;
+```
